fix(button): justify content correctly on mobile for icon left button

--- a/packages/button/src/button.pcss
+++ b/packages/button/src/button.pcss
@@ -42,6 +42,7 @@
 
   &--icon-left {
     flex-direction: row-reverse;
+    justify-content: flex-end;
   }
 
   &--strong {
